updated title and page description

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "tftbuild",
-  "name": "tftbuild",
+  "name": "tftbuild - TFT CheatSheet",
   "icons": [
     {
       "src": "favicon.ico",
